[gd_scene load_steps=12 format=3 uid="uid://iapf7gej3aqc"]

[ext_resource type="Texture2D" uid="uid://7k14yxyllmxr" path="res://addons/objects/table_horizontal.png" id="1_blarc"]
[ext_resource type="Script" uid="uid://ck1en861lxegt" path="res://scripts/table.gd" id="1_f5lcb"]
[ext_resource type="Texture2D" uid="uid://cnkpuepb6lnfe" path="res://addons/objects/table_horizontal2.png" id="3_lewgw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4lok"]
size = Vector2(26, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_55m2l"]
atlas = ExtResource("1_blarc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj6m0"]
atlas = ExtResource("1_blarc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d53dq"]
atlas = ExtResource("1_blarc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_byn5m"]
atlas = ExtResource("3_lewgw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp1dy"]
atlas = ExtResource("3_lewgw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0p1l"]
atlas = ExtResource("3_lewgw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5e21f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55m2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj6m0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d53dq")
}],
"loop": false,
"name": &"flip_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byn5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp1dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0p1l")
}],
"loop": false,
"name": &"flip_front",
"speed": 5.0
}]

[node name="HorizontalTable" type="StaticBody2D" groups=["object"]]
collision_layer = 2
script = ExtResource("1_f5lcb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_c4lok")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5e21f")
animation = &"flip_front"

[connection signal="flip" from="." to="." method="_on_flip"]
